[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tattoo-color-analyzer"
version = "2.0.0"
description = "AI-powered tattoo analysis for laser removal difficulty assessment"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Think Again Tattoo Removal", email = "info@thinkagaintattooremoval.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
requires-python = ">=3.8"
dependencies = [
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
ai = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
]
mcp = [
    "mcp>=0.1.0",
]
full = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "mcp>=0.1.0",
]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
tattoo-analyze = "src.cli:main"

[project.urls]
Homepage = "https://thinkagaintattooremoval.com"
Repository = "https://github.com/pixeloni/tattoo-color-analyzer"
Documentation = "https://github.com/pixeloni/tattoo-color-analyzer/wiki"
Issues = "https://github.com/pixeloni/tattoo-color-analyzer/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
